@@ -1,8 +1,10 @@
 devscripts (2.9.8) UNRELEASED; urgency=low
 
   * bts: don't require user for usertags (Closes: #326560)
+  * uupdate: handle csae of debian/ directory in upstream sources (Closes:
+    #320836)
 
- -- Julian Gilbey <jdg@polya.uklinux.net>  Sun,  4 Sep 2005 13:35:38 +0100
+ -- Julian Gilbey <jdg@polya.uklinux.net>  Tue,  6 Sep 2005 02:19:17 +0100
 
 devscripts (2.9.7) unstable; urgency=low
 
